--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1124,19 +1124,14 @@ Interestingly, the online menus was not used by participants in any regular or c
  It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
  -->
 
-I initially listed code examples in a shared google document and printed out self-contained chapters. While the code snippet and text resources were developed in response to the participant conflict described above they introduced new tensions. Specifically, I observed users failing or struggling to find the right resources online. I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created. Learning resources linked to game design patterns were presented in a grid format with colour-coded images that focused on the player experience rather than underlying coding constructs.
+Introducing documentation created additional tensions in the learning activity, specifically, I observed users failing or struggling to find the right resources online. This prompted me to design and introduce a themed hub for both snippets and tutorial chapters. My aim was to mitigate potential learner alienation from unfamiliar technical documentation through accessible design and to relating documentation to participants existing gameplay experience rather than underlying coding constructs. While time consuming, the process of aligning documentation, code snippets with more general concepts of game analysis, served to simplify the navigation of documentation. The guiding principle is that key affordances of the supporting secondary stimuli are designed to closely align with the objectives of leading activity at the predominant scope of activity.
 
 ![Pattern Collection](./Pictures/pattern_collection_1.png){width=95%}
 
-My motivations driving this design work were to mitigate potential learner alienation from unfamiliar technical documentation through accessible and attractive design and to relating documentation to participants existing gameplay experience.
-
-
 <!-- For easy of navigation I also included the starting template and a link to the online book of step-by-step resources. -->
-
 <!-- I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress. -->
 
 <!--
-
 In trying to organise and represent code examples to participants in a logical way, I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings. An example of the kind of grouping sketch used is included below as Figure 4.x.  
 
 ![Scan of Journal Sketch of early attempt at dividing features by type and difficulty](./Pictures/pattern_types_sketch.png){width=85%}
@@ -1145,10 +1140,11 @@ _Fig 4.x. Scan of Journal Sketch of early attempt at dividing features by type a
 
 The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. For example, I recognised synergies with between _open-world_ game design and my attempts to structure resources and help learners navigate the learning experience based on choosing challenges based on their interests and appropriate difficulty levels [@squire_open-ended_2008]. -->
 
-
 <!-- NOTE SOME MOVED TO NEXT CHAPTER -->
 
-In grouping the GDP I drew on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. Schnell's detailed analysis of tens of game elements presented as design lenses was too complex for this audience. Instead, I adapted a simplified introductory framework developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games [@cornish_game_2018; @institute_of_play_gamestar_nodate].
+INTRO SENTENCE
+
+The process of theming the patterns has the potential to develop the community knowledge of game making concepts [@holopainen2007teaching]. In grouping the game design patterns into categories for the documentation hub page, I drew on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. Schnell's detailed analysis of tens of game elements presented as design lenses was too complex for this audience. Instead, I adapted a simplified introductory framework developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games [@cornish_game_2018].
 
 - **SPACE:** Where the game takes place.
 - **GOAL:** What is the objective of the game? What are you trying to do?
@@ -1156,19 +1152,27 @@ In grouping the GDP I drew on academic and professional interpretations of game 
 - **MECHANICS:** What actions take place in the game. What are the verbs involved?
 - **RULES:** What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
 
-The developers used the framework youth game jams to help participants develop their implicit knowledge of game design concepts in to explicit share vocabulary before engaging in digital making via collaborative analysis of common games. In P1 asked participants to undertake a similar activity after playing retro arcade games [included in appendix]. I related this simple categorisation the emerging list of requests for game features made by my participants. I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _system and challenge_ patterns. These explore at how different elements interact to create challenge in the game.
+The framework youth game jams and in the Q2L school to help participants develop their implicit knowledge of game design concepts in to explicit share vocabulary before engaging in digital making via collaborative analysis of common games [@cornish_game_2018; @institute_of_play_gamestar_nodate]. Similarly, in early stages of my design participants completed a similar activity after playing retro arcade games [included in appendix].
+
+I related this simple categorisation the emerging list of requests for game features made by my participants.
+
+| **Game Mechanics**| **Game Polish** | **Game Space** | **Challenge Systems**|         
+|--------|------------|--------------|----------|
+| Jumping on Enemies  | polish. |  New levels | New levels |
+
+
+DEVELOP OR DROP
+This categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
+
+
+
+<!-- I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _system and challenge_ patterns. These explore at how different elements interact to create challenge in the game. -->
 
 <!-- I then took the existing list of game elements that have been identified by students and categorised them based on a blend of two frameworks. -->
 
 <!-- I made some simplifications and adaption to increase accessibility for non-professional and young people. For example, the term of aesthetics is very wide and suited simplification _game polish_. -->
 
-![Game Design Themes](./Pictures/four_gdp_themes.png){width=55%}
-
-In retrospect, I noted that this categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The process of theming the patterns by function and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
-
-While time consuming, the process of aligning documentation, code snippets with more general concepts of game analysis, served to simplify the navigation of documentation. The guiding principle is that key affordances of the  supporting secondary stimuli are designed to closely align with the objectives of leading activity at the predominant scope of activity.
-
-The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
+<!-- ![Game Design Themes](./Pictures/four_gdp_themes.png){width=55%} -->
 
 
 <!--
