--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1161,9 +1161,7 @@ I related this simple categorisation the emerging list of requests for game feat
 | Jumping on Enemies  | polish. |  New levels | New levels |
 
 
-DEVELOP OR DROP
-This categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
-
+This categorisation, while simplified, is consistent with professional and technical frameworks popular in game making communities including: the MDA framework [@olsson2014conceptual] (which focuses on analysis of games based on the user experience), Elemental Tetrad [@schell_art_2008], and DDE [@korn_design_2017]. The theme of using technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
 
 
 <!-- I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _system and challenge_ patterns. These explore at how different elements interact to create challenge in the game. -->
