--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -656,9 +656,7 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
 
-This conflict involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics. I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme.
-
-The shared in feedback (see appendix 4.x) the moment that decided their withdrawal. At one point they looked around and just saw people doing hardcore coding and no longer felt at home in the environment. In early sessions the family members had planned design on paper and created digital pixel art. In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated.
+This conflict involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics. I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. They shared in feedback (see appendix 4.x) the moment that decided their withdrawal. At one point they looked around and just saw people doing hardcore coding and no longer felt at home in the environment. In early sessions the family members had planned design on paper and created digital pixel art. In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated.
 
 To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and the technical environment they found themselves in available to them.
 
@@ -719,9 +717,7 @@ These sections contain a highly granular level of detail which is both helps sit
 <!-- Self-contained so many things set up by default,
 a default screen size, asset creation tools, online community, comments and friend section.  -->
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
-
-Those principles help address the key tension explored in this section. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [find source]. To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced and my design adaptations.
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants responded the tools introduced and my design adaptations.
 
 <!--
 These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. -->
@@ -1191,7 +1187,7 @@ The value of participant input to intervention-based research in the domain of t
 
 While a full description of how this happened is beyond the remit of this chapter, this external input served several functions including: access to novel technical approaches proposed by parents and university volunteers; the surfacing of systemic conflicts hidden from my initial perception stemming from my pre-conceptions; observation of participant conflicts spurred the introduction of new tools to support development; and parental proficiency in adapting the learning environment to supporting their children leading to community-wide innovations in practice. My role as a facilitator included recognising and supporting the emergence of a repertoire of varied emergent practices in the responses of participants, and then to support these practices with suitable tools and resources. In this way, I support participants to build agency in their transformation of learning process.
 
-While some of these dynamics are already well explored in work surrounding the 5th Dimension project [@cole_fifth_2006;] (explored in the literature review), the presence of parents adds significant opportunities. I propose that this informal and exploratory setting with the participation of engaged parents, young people and their access to family learning dynamics and wider expertise provides potentially fertile ground in the generation of resources and domain practices. I explore the potential of this theme in more detail in the conclusion of this thesis.  
+While some of these dynamics are already well explored in work surrounding the 5th Dimension project [@cole_fifth_2006] (explored in the literature review), the presence of parents adds significant opportunities. I propose that this informal and exploratory setting with the participation of engaged parents, young people and their access to family learning dynamics and wider expertise provides potentially fertile ground in the generation of resources and domain practices. I explore the potential of this theme in more detail in the conclusion of this thesis.  
 
 
 <!-- As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings.The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants. -->
