--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1239,38 +1239,39 @@ In summary, this chapter has explored the complexity of the interacting tools an
 
 ### Summary of barriers and tensions explored in this chapter
 
-The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data.
-
-The purpose of this summary is to help recap and ground the reader before exploring the experiences of participants in more detail in chapters five and six. It focuses on use of tools but also signposts some social and cultural elements.
+The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data. The purpose of this summary is to help recap and ground the reader before exploring the experiences of participants in more detail in chapters five and six. It focuses on use of tools but also signposts some social and cultural elements.
 
 <!-- NOTE Perhaps linking to appendix. -->
 
 
 | **Barrier / Tension**| **Description** | **Related Intervention**         
 |--------|------------|--------------|
-| Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
-| Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  |  Supporting resources to reinforce previous experimentation with the code base and facilitator explanation when concepts are met in-situ   |
-| Barriers to comprehending the overall game code template   | The use of preload, create and update functions   |  Outlining the structure in supporting resources and game to reinforce and test tacit knowledge in a playful way |
-| Lack of direct knowledge of game making approaches  | Play states, game design patterns, impact of aesthetics    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
 | Alienation from culture of computer coding  | As outlined in literature review.     |  Use of games, play testing and other social approaches. Explored in chapter six |
-| Professional coding tools increase authenticity at the prices of complexity  | While suitable open source tools exist, they need careful curation by faciliators to reduce cognitive load    |  Design of template to surface key affordances.  |
+| Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
+| Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  | A starting template with much of the needed code in place, facilitator explanation when concepts are met in-situ, supporting documentation to reinforce previous experimentation   |
+| Lack of direct knowledge of game making conventions and experience of game analysis  | e.g. common game programming patterns    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
+| Tension between pre-choosing game genre and allowing for flexible choice of participants   | Example of the family wanting to make a 3D exploration game, but my in ability to support that   |  Introduction of the templated 2D platformer in a half-baked stage to create an engaging first impression, and ability to quickly personalise the game to increase participants' feelings of ownership over it|
+| Tension between teaching the programming of game states and the complexity it introduced  | e.g. play state, settings page, welcome screen, game over screen    |  Introducing one state in the game code thus allowing extension, but not drawing attention to it |
+| Tension between engagement value of providing a wide range distributed we production tools and complexity and disunity it induced   | e.g. move from diverse tools used in P1 to one raphical editor and one audio tool in P2  |  Restriction prioritised to encourage group work, as engagement was already high |
+| Tension between the use of professional coding tools which increase authenticity at the prices of greater learning curve in adoption  | While suitable open source tools exist, they need careful curation by facilitators to reduce cognitive load    |  Design of template to surface key affordances to mitigate barriers to use and start usage patterns.   |
+| Tension between producing extensive and varied documentation to support the different design choices of users and the increased complexity of navigation of the learning experience this brings  | The process of finding and following documentation was patchy   |  Resources were provided in a menu form linking to both code snippets and instructions |
+
+
+<!-- | Barriers to comprehending the complexity of game code template   | The use of preload, create and update functions   |  Outlining the structure in supporting resources and game to reinforce and test tacit knowledge in a playful way | -->
 
 <!-- NOTE Not included
 Social feare, problems of group work
 Attention factors, maintaining persistance
 Learning concepts via instruction is demotivating -->
 
-NOTE - also return to this table
+<!-- NOTE - also return to this table
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 or this one
-https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
+https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit -->
 
-NOTE - PERHAPS INCLUDE ELEMENT OF AUTHENTICITY HERE AND SIGNPOST TO FUTURE WORK?
 
 
 ### Link to next chapter
-
-
 
 <!-- This chapter charts the evolution of tools and resources which occupy a middle ground between instruction and free choice creative approaches.  -->
 
